--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,13 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-
+  # ui
   rounded_modal: ^1.0.0
-  scoped_model: ^1.0.1
+
+  # utilities
+  redux: ^3.0.0
+  flutter_redux: ^0.5.2
+
   uuid: ^1.0.3
 
 dev_dependencies:
